@@ -30,6 +30,7 @@ Other features
  * Add Reddit to oEmbed provider list (Luke Hardwick)
  * Remove sticky footer on small devices, so that content is not blocked and more easily editable (Saeed Tahmasebi)
  * Add ability to replace the default Wagtail logo in the userbar, via ``branding_logo`` block (Meteor0id)
+ * Add `alt` property to `ImageRenditionField` api representation (Liam Mullens)
 
 
 Bug fixes
