@@ -21,6 +21,7 @@ Changelog
  * Add Reddit to oEmbed provider list (Luke Hardwick)
  * Add ability to replace the default Wagtail logo in the userbar, via `branding_logo` block (Meteor0id)
  * Remove sticky footer on small devices, so that content is not blocked and more easily editable (Saeed Tahmasebi)
+ * Add ``alt`` property to ``ImageRenditionField`` api representation (Liam Mullens)
  * Fix: Support IPv6 domain (Alex Gleason, Coen van der Kamp)
  * Fix: Ensure link to add a new user works when no users are visible in the users list (LB (Ben Johnston))
  * Fix: `AbstractEmailForm` saved submission fields are now aligned with the email content fields, `form.cleaned_data` will be used instead of `form.fields` (Haydn Greatnews)
